# metrex

./: .gitignore  CONTRIBUTING.md  README.md  example_usage.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
metrex/: __init__.py  cli.py  core.py  io.py  processor.py  timeutils.py
metrex/metrics/: __init__.py  adv_decline.py  avg_correlation_btc.py  base.py  breadth_sma50.py  btc_trend_slope.py  market_return_ma.py  market_vol_regime.py  new_highs_lows.py  volume_surge_ratio.py
results/: Q2_2023_metrics.csv  Q2_2023_metrics.feather
