[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrex"
version = "0.1.0"
description = "External market metrics for trading strategies — breadth, volatility, and trend context from your local data."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luay Sakr", email = "luay@example.com"}
]
dependencies = [
    "pandas>=1.3.0",
    "pyarrow>=5.0.0",
    "numpy>=1.21.0",
    "click>=8.0.0",
]
requires-python = ">=3.8"

[project.scripts]
metrex = "metrex.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metrex*"]